{
    "name": "New Controls",
    "maps": [
        {
            "name": "JetEngine",
            "id": "60ad5006-978a-4db7-bb7a-25cf41c471cb",
            "actions": [
                {
                    "name": "ThrottleUp",
                    "type": "Button",
                    "id": "572727ef-4ffc-4d73-8397-b773d7f31f35",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThrottleDown",
                    "type": "Button",
                    "id": "db56ad60-aff3-4cf3-84ff-de9913fdd142",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleAfterburner",
                    "type": "Button",
                    "id": "8429fd34-9890-49eb-9cf1-5e739925407d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bf48a767-7942-4b51-8402-e9c9eb398a75",
                    "path": "<Keyboard>/{Shift}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrottleUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e36157a-a8ec-4ed4-bac2-2a28c86e7965",
                    "path": "<Keyboard>/{Left Ctrl}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrottleDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d718dcd-beb4-4112-b482-e506526625f0",
                    "path": "<Keyboard>/{Left Alt}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleAfterburner",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}